--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -16,8 +16,9 @@
   }
 .left_icons{
   display: flex;
-  justify-content: center;
-  width:100px;
+  align-items: center;
+  justify-content:space-evenly;
+  width:300px;
   height: 70px;
   flex-direction: row;
   background-color:#CD5D67;
@@ -34,6 +35,7 @@
 }
 .logo{
   width:68px;
+  height:70px;
   background-color:#CD5D67;
 }
 .button-55 {
