--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -12,16 +12,18 @@
   justify-content:space-between;
   width:100%;
   height:75px;
-  background-color:#CD5D67;
+  /*background-color:#CD5D67;*/
   }
 .left_icons{
   display: flex;
   align-items: center;
-  justify-content:space-evenly;
+  justify-content:flex-start;
+
   width:300px;
   height: 70px;
   flex-direction: row;
-  background-color:#CD5D67;
+  /*background-color:#CD5D67;*/
+  padding-left: 20px;
 
 }
 .Right_icons{
@@ -33,10 +35,25 @@
   height: 60px;
   margin-right: 20px;
 }
+.Middle_icons{
+  display:flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width:500px;
+  height: 60px;
+}
 .logo{
   width:68px;
   height:70px;
-  background-color:#CD5D67;
+  /*background-color:#CD5D67;*/
+}
+.ImportantTasks{
+  text-decoration: underline;
+  font-weight: 300;
+  font-size: 20px;
+}
+.ImportantTasks:hover{
+  cursor: pointer;
 }
 .button-55 {
   align-self: center;
@@ -81,7 +98,7 @@
 .moon{
   width:30px;
   height:30px;
-  background-color:#CD5D67;
+  /*background-color:#CD5D67;*/
 border: none;
 
 }
@@ -92,8 +109,8 @@ border: none;
 .sun{
   width:30px;
   height:30px;
-  background-color:#CD5D67;
-border: none;
+  /*background-color:#CD5D67;*/
+  border: none;
 
 }
 .sun img{
