new loght theme applied

--- a/src/components/page/Important.css
+++ b/src/components/page/Important.css
@@ -21,8 +21,8 @@
     height:85%;
     /*padding-top: 20px;
     padding-bottom: 20px;*/
-    background-color: #E8D7FF;
-    border: solid;
-    border-color:black;
+    /*background-color: #E8D7FF;*/
+    /*border: solid;*/
+    /*border-color:black;*/
     
 }
