--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   width:400px;
   height: 60px;
   margin-right: 20px;
@@ -298,4 +298,15 @@ border: none;
     inset -5px -5px 10px #444;
   color: #d6d6d6;
   transition: 500ms;
+}
+.Epic{
+  width:50px;
+  height:50px;
+  border-radius: 100px;
+}
+.EpicButton{
+  width:50px;
+  height:50px;
+  border-radius: 100px;
+  cursor: pointer;
 }
